fix: more button spacing

--- a/projects/ui/src/shim.cds-core.scss
+++ b/projects/ui/src/shim.cds-core.scss
@@ -260,6 +260,9 @@
 
   // Button groups
   --clr-btn-border-width: var(--cds-global-space-1);
+  --clr-btn-border-radius: var(--cds-alias-object-border-radius-100);
+  --clr-btn-appearance-standard-line-height: var(--cds-global-space-7);
+  --clr-btn-appearance-standard-padding: 0 var(--cds-global-space-6);
 
   /* Alert Color Properties */
 
